Theming: wishlist (final)

--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
@@ -50,7 +50,7 @@
     else // Dropdown
     {
         <div class="mf-dropdown d-block">
-            <button class="btn btn-secondary btn-block justify-content-start px-2 gap-1" attr-class='(controlSize != ControlSize.Medium, controlSize == ControlSize.Large ? "btn-lg" : "btn-sm")'>
+            <button class="btn btn-secondary btn-block justify-content-start gap-1" attr-class='(controlSize != ControlSize.Medium, controlSize == ControlSize.Large ? "btn-lg" : "btn-sm")'>
                 <span class="fwn text-truncate">@T("ShoppingCart.Quantity"):</span>
                 <span data-bind="value">@Model.EnteredQuantity</span>
                 <i class="fas fa-xs fa-angle-down btn-icon-fix ml-auto"></i>
