--- a/src/Smartstore.Web/Views/Identity/Register.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Register.cshtml
@@ -225,7 +225,7 @@
                 <fieldset sm-if="Model.NewsletterEnabled" class="content-group">
                     <legend><span>@T("Account.Options")</span></legend>
                     <div class="form-group row">
-                        <div class="col form-control-plaintext">
+                        <div class="col">
                             <div class="form-check">
                                 <input asp-for="Newsletter" sm-ignore-label="true" sm-switch="false" class="remember form-check-input" />
                                 <label class="form-check-label" for="Newsletter">
