Fixed minor mistake

--- a/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
@@ -7,7 +7,7 @@
         <partial name="Customer.Avatar" model="Model.Avatar" />
     </div>
     <div class="col align-self-center text-truncate pr-4 pr-md-1">
-        <div class="my-account-username fwm text-truncate">@Model.CustomerName @Model.CustomerName</div>
-        <div class="my-account-email text-muted small text-truncate">@Model.CustomerEmail @Model.CustomerEmail</div>
+        <div class="my-account-username fwm text-truncate">@Model.CustomerName</div>
+        <div class="my-account-email text-muted small text-truncate">@Model.CustomerEmail</div>
     </div>
 </div>
