Theming: cart redesign / order details (wip)

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
@@ -407,12 +407,14 @@
     }
 
     .cart-summary-pos {
-        color: theme-color-level(success, $alert-color-level);
-        font-weight: $font-weight-medium;
+        color: var(--success-text-emphasis);
+        > .cart-summary-value {
+            font-weight: $font-weight-medium;
+        }
     }
 
     .cart-summary-neg {
-        color: theme-color-level(danger, $alert-color-level);
+        color: var(--danger-text-emphasis);
     }
 
     .cart-summary-total {
