Closes #799 Product linkage input group in _CreateOrUpdateProductAttributeValue looks ugly

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
@@ -68,7 +68,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" id="linked-product-name" placeholder="@T("Common.Unspecified")" value="@Model.LinkedProductName" readonly>
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-outline-secondary btn-to-danger btn-remove-product-linkage">
+                    <button type="button" class="btn btn-outline-secondary btn-to-danger btn-remove-product-linkage" style="border-radius:0 var(--btn-border-radius)  var(--btn-border-radius) 0">
                         <i class="fa fa-times"></i>
                         <span>@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.UnlinkProduct")</span>
                     </button>
