Closes #493 Display quantity name plural when quantity unit is more then 1

--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
@@ -38,11 +38,13 @@
             type="number" 
             attrs="@attributes"
             sm-control-size="@controlSize"
-            sm-postfix="@Model.QuantityUnitName"
+            sm-postfix="@(Value == "1" ? Model.QuantityUnitName : Model.QuantityUnitNamePlural)"
             sm-numberinput-style="Centered"
             data-step-interval="150"
             data-auto-select="false"
             data-auto-focus="false"
+            data-quantity-unit-name="@Model.QuantityUnitName"
+            data-quantity-unit-name-plural="@Model.QuantityUnitNamePlural"
             min="@Model.MinOrderAmount"
             max="@Model.MaxOrderAmount"
             step="@Model.QuantityStep" />
