Closes #405 OrderReview meta: Meta tag itemReviewed is missing.

--- a/src/Smartstore.Web/Views/Product/Reviews.cshtml
+++ b/src/Smartstore.Web/Views/Product/Reviews.cshtml
@@ -13,7 +13,7 @@
         <h1 class="h3">
             <span class="pr-2">@T("Reviews.ProductReviewsFor")</span>
             <small sm-language-attributes-for="Model.ProductName">
-                <a asp-route="Product" asp-route-SeName="@Model.ProductSeName" style="text-decoration: none;">@Model.ProductName</a>
+                <a asp-route="Product" asp-route-SeName="@Model.ProductSeName">@Model.ProductName</a>
             </small>
         </h1>
     </div>
