Product linkage review

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
@@ -431,7 +431,7 @@
 
 .cart-checkout-attributes {
     margin-bottom: 0.5rem;
-    border-bottom: 1px solid rgba(#000, 0.12);
+    border-bottom: 1px solid rgba($black, 0.12);
 }
 
 
