--- a/src/Smartstore.Web/Areas/Admin/Views/ProductAttribute/_CreateOrUpdateOption.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/ProductAttribute/_CreateOrUpdateOption.cshtml
@@ -25,7 +25,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" id="linked-product-name" placeholder="@T("Common.Unspecified")" value="@Model.LinkedProductName" readonly />
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-outline-secondary btn-to-danger btn-remove-product-linkage" style="border-radius:0 var(--btn-border-radius)  var(--btn-border-radius) 0">
+                    <button type="button" class="btn btn-outline-secondary btn-to-danger rounded-right btn-remove-product-linkage">
                         <i class="fa fa-times"></i>
                         <span>@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.UnlinkProduct")</span>
                     </button>
