--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
@@ -4,7 +4,8 @@
 
 @model IQuantityInput
 
-@functions{
+@functions 
+{
     private string Value
     {
         get
@@ -38,13 +39,13 @@
             type="number" 
             attrs="@attributes"
             sm-control-size="@controlSize"
-            sm-postfix="@(Value == "1" ? Model.QuantityUnitName : Model.QuantityUnitNamePlural)"
+            sm-postfix="@(Model.EnteredQuantity > 1 ? Model.QuantityUnitNamePlural : Model.QuantityUnitName)"
             sm-numberinput-style="Centered"
             data-step-interval="150"
             data-auto-select="false"
             data-auto-focus="false"
-            data-quantity-unit-name="@Model.QuantityUnitName"
-            data-quantity-unit-name-plural="@Model.QuantityUnitNamePlural"
+            data-qtyunit-singular="@Model.QuantityUnitName"
+            data-qtyunit-plural="@Model.QuantityUnitNamePlural"
             min="@Model.MinOrderAmount"
             max="@Model.MaxOrderAmount"
             step="@Model.QuantityStep" />
